# ZYRON

./: .env.example  .gitignore  README.md  cli.py  main.py  pyproject.toml  requirements-voice.txt  requirements.txt
ai/: __init__.py  ollama_client.py
application/: context.py  events.py  memory.py  processor.py  scheduler.py  skills.py
automation/: __init__.py  app_launcher.py  browser_controller.py
bootstrap/: __init__.py  container.py
commands/: __init__.py  command_interpreter.py  command_router.py  factory.py  handlers.py
core/: __init__.py  application.py  config.py  memory.py  models.py  ports.py
database/: __init__.py  sqlite_repository.py
domain/: __init__.py  models.py  ports.py
infrastructure/persistence/: __init__.py  sqlite_repository.py
infrastructure/voice/: audio_capture.py  speech_recognizer.py  speech_synthesizer.py  wake_word_detector.py
interfaces/: text_cli.py  voice_cli.py
plugins/: __init__.py  base.py  dependencies.py  loader.py  manager.py  registry.py  simple.py
plugins/core/: ai_plugin.py  application_plugin.py  browser_plugin.py  memory_plugin.py  system_plugin.py
plugins/integrations/: git_plugin.py  github_plugin.py  linux_plugin.py  notion_plugin.py  obs_plugin.py  spotify_plugin.py  (+4 more)
services/: __init__.py  time_service.py  weather_service.py
tests/: test_application_text.py  test_architecture_hardening.py  test_command_interpreter.py  test_command_router.py  test_microphone.py  test_new_core.py  test_voice_cli.py  test_whisper.py
voice/: __init__.py  speech_to_text.py  text_to_speech.py  wake_word.py
(+88 files in other folders)
