[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "zyron-assistant"
version = "0.1.0"
description = "Assistente pessoal local com IA, voz, memória e automações"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0.3",
    "sounddevice>=0.4.7",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "edge-tts>=7.0.0",
    "pygame>=2.5.2",
]

dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
zyron = "zyron.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
